Proyecto: AgendaFX. En esta version tengo mejorado todos los aspectos y todas las  funcionalidades perfecta. Solo me queda borrar el boton nuevo de la pantalla principal.