@@ -5,17 +5,24 @@ import modelo.dao.UsuarioDAO;
 import modelo.dao.UsuarioDAOImpl;
 
 public class UsuarioServiceImpl implements UsuarioService {
-	
+    
     private final UsuarioDAO usuarioDAO;
+    
 
     public UsuarioServiceImpl() {
         this.usuarioDAO = new UsuarioDAOImpl();
     }
 
-    // Registrar un usuario
+    // ✅ Registrar un usuario con validación mejorada
     public boolean registrarUsuario(String correo, String password) {
-        if (correo.isBlank() || password.isBlank()) {
-            System.out.println("Correo y contraseña no pueden estar vacíos.");
+        if (correo == null || correo.trim().isEmpty() || password == null || password.trim().isEmpty()) {
+            System.out.println("⚠ Correo y contraseña no pueden estar vacíos.");
+            return false;
+        }
+
+        // Validación básica de formato de correo
+        if (!correo.matches("^[^@\\s]+@[^@\\s]+\\.[^@\\s]+$")) {
+            System.out.println("⚠ El correo ingresado no es válido.");
             return false;
         }
 
@@ -23,13 +30,23 @@ public class UsuarioServiceImpl implements UsuarioService {
         return usuarioDAO.registrarUsuario(usuario);
     }
 
-    // Autenticar usuario
+    // ✅ Autenticar usuario con validación mejorada
     public Usuario autenticarUsuario(String correo, String password) {
-        if (correo.isBlank() || password.isBlank()) {
-            System.out.println("Correo y contraseña no pueden estar vacíos.");
+        if (correo == null || correo.trim().isEmpty() || password == null || password.trim().isEmpty()) {
+            System.out.println("⚠ Correo y contraseña no pueden estar vacíos.");
             return null;
         }
 
         return usuarioDAO.autenticarUsuario(correo, password);
+    }
+    
+    public boolean validarUsuario(String correo, String password) {
+        if (correo == null || correo.trim().isEmpty() || password == null || password.trim().isEmpty()) {
+            System.out.println("⚠ Correo y contraseña no pueden estar vacíos.");
+            return false;
+        }
+
+        Usuario usuario = usuarioDAO.buscarPorCorreo(correo);
+        return usuario != null && usuario.getPassword().equals(password);
     }
 }
